--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@toast-ui/react-grid": "^4.18.1",
     "axios": "^0.21.1",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
