--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-daum-postcode": "^2.0.6",
     "react-dom": "^17.0.2",
     "react-responsive": "^8.2.0",
+    "react-responsive-carousel": "^3.2.21",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
