--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@toast-ui/react-grid": "^4.18.1",
     "axios": "^0.21.1",
     "node-sass": "^6.0.1",
+    "query-string": "^7.0.1",
     "react": "^17.0.2",
     "react-daum-postcode": "^2.0.6",
     "react-dom": "^17.0.2",
