--- a/client/package.json
+++ b/client/package.json
@@ -18,10 +18,12 @@
     "react": "^17.0.2",
     "react-daum-postcode": "^2.0.6",
     "react-dom": "^17.0.2",
+    "react-hooks-paginator": "^0.4.4",
     "react-responsive": "^8.2.0",
     "react-responsive-carousel": "^3.2.21",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "tui-pagination": "^3.4.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
