--- a/client/package.json
+++ b/client/package.json
@@ -13,11 +13,13 @@
     "@testing-library/user-event": "^12.8.3",
     "@toast-ui/react-grid": "^4.18.1",
     "axios": "^0.21.1",
+    "draft-js": "^0.11.7",
     "node-sass": "^6.0.1",
     "query-string": "^7.0.1",
     "react": "^17.0.2",
     "react-daum-postcode": "^2.0.6",
     "react-dom": "^17.0.2",
+    "react-draft-wysiwyg": "^1.14.7",
     "react-hooks-paginator": "^0.4.4",
     "react-responsive": "^8.2.0",
     "react-responsive-carousel": "^3.2.21",
