--- a/client/package.json
+++ b/client/package.json
@@ -8,12 +8,16 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "@nick4fake/react-draft-wysiwyg": "^1.15.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@toast-ui/react-grid": "^4.18.1",
     "axios": "^0.21.1",
     "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
+    "draftjs-to-markdown": "^0.6.0",
+    "html-react-parser": "^1.3.0",
     "node-sass": "^6.0.1",
     "query-string": "^7.0.1",
     "react": "^17.0.2",
@@ -21,6 +25,7 @@
     "react-dom": "^17.0.2",
     "react-draft-wysiwyg": "^1.14.7",
     "react-hooks-paginator": "^0.4.4",
+    "react-quill": "^1.3.5",
     "react-responsive": "^8.2.0",
     "react-responsive-carousel": "^3.2.21",
     "react-router-dom": "^5.2.0",
