--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@toast-ui/react-grid": "^4.18.1",
     "axios": "^0.21.1",
     "draft-js": "^0.11.7",
+    "draft-js-import-html": "^1.4.1",
     "draftjs-to-html": "^0.9.1",
     "draftjs-to-markdown": "^0.6.0",
     "html-react-parser": "^1.3.0",
