--- a/server/package.json
+++ b/server/package.json
@@ -5,18 +5,22 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
+    "start": "node server.js",
     "dev:server": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.991.0",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "heroku": "^7.59.0",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.3",
+    "multer-s3": "^2.9.0",
     "mysql2": "^2.2.5",
     "nodemon": "^2.0.9"
   }
